# satellite

./: Cargo.toml  design.txt
examples/axum_server/: main.rs
src/: lib.rs
src/endpoint/: avatar.rs  mod.rs  service.rs  subject.rs
src/server/: axum.rs
src/transport/: cluster.rs  connection.rs  endpoint.rs  mod.rs  node.rs  protocol.rs
src/transport/cluster/: connection.rs  discovery.rs  message.rs
src/transport/cluster/connection/: axum.rs  local.rs  tungstenite.rs
src/transport/cluster/discovery/: redis.rs  standalone.rs
src/transport/endpoint/: channel.rs  message.rs  websocket.rs
