[package]
name = "satellite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features=["ws"] }
bincode = "1.3.3"
futures = "0.3.29"
http = "1.0.0"
redis = { version = "0.23.3", features = ["tokio", "tokio-comp"] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tokio-util = { version = "0.7.10", features = ["time"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.5.0", features = ["serde", "v4", "fast-rng"] }
